// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should apply className if it was passed 1`] = `
<div>
  <div
    class="quill-checkbox wrapper_className"
  >
    <div
      class="quill-checkbox__wrapper quill-checkbox__wrapper--left"
    >
      <input
        class="quill-checkbox__box"
        type="checkbox"
      />
      <svg
        class="quill-checkbox__box-icon quill-checkbox__box-icon--pale"
        height="24"
        role="img"
        viewBox="0 0 32 32"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.25 9.625H9.75a.64.64 0 0 0-.625.625v12.5c0 .352.273.625.625.625h12.5a.64.64 0 0 0 .625-.625v-12.5c0-.312-.312-.625-.625-.625M9.75 7.75h12.5c1.367 0 2.5 1.133 2.5 2.5v12.5c0 1.406-1.133 2.5-2.5 2.5H9.75a2.47 2.47 0 0 1-2.5-2.5v-12.5c0-1.367 1.094-2.5 2.5-2.5"
        />
      </svg>
    </div>
    <label>
      <span
        class="quill-typography__body-text__size--sm__weight--regular__decoration--default quill-typography__color--default quill-checkbox__label"
      >
        Checkbox label
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox should apply correct className if checkboxPosition is 'right' 1`] = `
<div>
  <div
    class="quill-checkbox"
  >
    <div
      class="quill-checkbox__wrapper quill-checkbox__wrapper--right"
    >
      <input
        class="quill-checkbox__box"
        type="checkbox"
      />
      <svg
        class="quill-checkbox__box-icon quill-checkbox__box-icon--pale"
        height="24"
        role="img"
        viewBox="0 0 32 32"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.25 9.625H9.75a.64.64 0 0 0-.625.625v12.5c0 .352.273.625.625.625h12.5a.64.64 0 0 0 .625-.625v-12.5c0-.312-.312-.625-.625-.625M9.75 7.75h12.5c1.367 0 2.5 1.133 2.5 2.5v12.5c0 1.406-1.133 2.5-2.5 2.5H9.75a2.47 2.47 0 0 1-2.5-2.5v-12.5c0-1.367 1.094-2.5 2.5-2.5"
        />
      </svg>
    </div>
    <label>
      <span
        class="quill-typography__body-text__size--sm__weight--regular__decoration--default quill-typography__color--default quill-checkbox__label"
      >
        Checkbox label
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox should apply id if it was passed 1`] = `
<div>
  <div
    class="quill-checkbox"
  >
    <div
      class="quill-checkbox__wrapper quill-checkbox__wrapper--left"
    >
      <input
        class="quill-checkbox__box"
        id="mock_id"
        type="checkbox"
      />
      <svg
        class="quill-checkbox__box-icon quill-checkbox__box-icon--pale"
        height="24"
        role="img"
        viewBox="0 0 32 32"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.25 9.625H9.75a.64.64 0 0 0-.625.625v12.5c0 .352.273.625.625.625h12.5a.64.64 0 0 0 .625-.625v-12.5c0-.312-.312-.625-.625-.625M9.75 7.75h12.5c1.367 0 2.5 1.133 2.5 2.5v12.5c0 1.406-1.133 2.5-2.5 2.5H9.75a2.47 2.47 0 0 1-2.5-2.5v-12.5c0-1.367 1.094-2.5 2.5-2.5"
        />
      </svg>
    </div>
    <label
      for="mock_id"
    >
      <span
        class="quill-typography__body-text__size--sm__weight--regular__decoration--default quill-typography__color--default quill-checkbox__label"
      >
        Checkbox label
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox should apply labelClassName if it was passed 1`] = `
<div>
  <div
    class="quill-checkbox"
  >
    <div
      class="quill-checkbox__wrapper quill-checkbox__wrapper--left"
    >
      <input
        class="quill-checkbox__box"
        type="checkbox"
      />
      <svg
        class="quill-checkbox__box-icon quill-checkbox__box-icon--pale"
        height="24"
        role="img"
        viewBox="0 0 32 32"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.25 9.625H9.75a.64.64 0 0 0-.625.625v12.5c0 .352.273.625.625.625h12.5a.64.64 0 0 0 .625-.625v-12.5c0-.312-.312-.625-.625-.625M9.75 7.75h12.5c1.367 0 2.5 1.133 2.5 2.5v12.5c0 1.406-1.133 2.5-2.5 2.5H9.75a2.47 2.47 0 0 1-2.5-2.5v-12.5c0-1.367 1.094-2.5 2.5-2.5"
        />
      </svg>
    </div>
    <label>
      <span
        class="quill-typography__body-text__size--sm__weight--regular__decoration--default quill-typography__color--default quill-checkbox__label label_className"
      >
        Checkbox label
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox should apply name if it was passed 1`] = `
<div>
  <div
    class="quill-checkbox"
  >
    <div
      class="quill-checkbox__wrapper quill-checkbox__wrapper--left"
    >
      <input
        class="quill-checkbox__box"
        id="mock_name"
        name="mock_name"
        type="checkbox"
      />
      <svg
        class="quill-checkbox__box-icon quill-checkbox__box-icon--pale"
        height="24"
        role="img"
        viewBox="0 0 32 32"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.25 9.625H9.75a.64.64 0 0 0-.625.625v12.5c0 .352.273.625.625.625h12.5a.64.64 0 0 0 .625-.625v-12.5c0-.312-.312-.625-.625-.625M9.75 7.75h12.5c1.367 0 2.5 1.133 2.5 2.5v12.5c0 1.406-1.133 2.5-2.5 2.5H9.75a2.47 2.47 0 0 1-2.5-2.5v-12.5c0-1.367 1.094-2.5 2.5-2.5"
        />
      </svg>
    </div>
    <label
      for="mock_name"
    >
      <span
        class="quill-typography__body-text__size--sm__weight--regular__decoration--default quill-typography__color--default quill-checkbox__label"
      >
        Checkbox label
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox should render correct attribute of input if checked === true 1`] = `
<div>
  <div
    class="quill-checkbox"
  >
    <div
      class="quill-checkbox__wrapper quill-checkbox__wrapper--left"
    >
      <input
        checked=""
        class="quill-checkbox__box"
        type="checkbox"
      />
      <svg
        class="quill-checkbox__box-icon"
        height="24"
        role="img"
        viewBox="0 0 32 32"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.75 7.75h12.5c1.367 0 2.5 1.133 2.5 2.5v12.5c0 1.406-1.133 2.5-2.5 2.5H9.75a2.47 2.47 0 0 1-2.5-2.5v-12.5c0-1.367 1.094-2.5 2.5-2.5m10.664 6.914h-.039c.39-.351.39-.937 0-1.328a.92.92 0 0 0-1.29 0L14.75 17.71l-1.836-1.836c-.39-.39-.976-.39-1.328 0a.856.856 0 0 0 0 1.29l2.5 2.5c.351.39.937.39 1.328 0z"
        />
      </svg>
    </div>
    <label>
      <span
        class="quill-typography__body-text__size--sm__weight--regular__decoration--default quill-typography__color--default quill-checkbox__label"
      >
        Checkbox label
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox should render correct attribute of input if disabled === true 1`] = `
<div>
  <div
    class="quill-checkbox quill-checkbox--disabled"
  >
    <div
      class="quill-checkbox__wrapper quill-checkbox__wrapper--left"
    >
      <input
        class="quill-checkbox__box"
        disabled=""
        type="checkbox"
      />
      <svg
        class="quill-checkbox__box-icon quill-checkbox__box-icon--pale"
        height="24"
        role="img"
        viewBox="0 0 32 32"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.25 9.625H9.75a.64.64 0 0 0-.625.625v12.5c0 .352.273.625.625.625h12.5a.64.64 0 0 0 .625-.625v-12.5c0-.312-.312-.625-.625-.625M9.75 7.75h12.5c1.367 0 2.5 1.133 2.5 2.5v12.5c0 1.406-1.133 2.5-2.5 2.5H9.75a2.47 2.47 0 0 1-2.5-2.5v-12.5c0-1.367 1.094-2.5 2.5-2.5"
        />
      </svg>
    </div>
    <label>
      <span
        class="quill-typography__body-text__size--sm__weight--regular__decoration--default quill-typography__color--default quill-checkbox__label"
      >
        Checkbox label
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox should render correct icon if indeterminate === true 1`] = `
<div>
  <div
    class="quill-checkbox"
  >
    <div
      class="quill-checkbox__wrapper quill-checkbox__wrapper--left"
    >
      <input
        class="quill-checkbox__box"
        type="checkbox"
      />
      <svg
        class="quill-checkbox__box-icon"
        height="24"
        role="img"
        viewBox="0 0 32 32"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.75 7.75h12.5c1.367 0 2.5 1.133 2.5 2.5v12.5c0 1.406-1.133 2.5-2.5 2.5H9.75a2.47 2.47 0 0 1-2.5-2.5v-12.5c0-1.367 1.094-2.5 2.5-2.5m3.438 7.813a.925.925 0 0 0-.938.937c0 .547.39.938.938.938h5.624c.508 0 .938-.391.938-.938a.95.95 0 0 0-.937-.937z"
        />
      </svg>
    </div>
    <label>
      <span
        class="quill-typography__body-text__size--sm__weight--regular__decoration--default quill-typography__color--default quill-checkbox__label"
      >
        Checkbox label
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox should render correct label size if size === 'md' 1`] = `
<div>
  <div
    class="quill-checkbox"
  >
    <div
      class="quill-checkbox__wrapper quill-checkbox__wrapper--left"
    >
      <input
        class="quill-checkbox__box"
        type="checkbox"
      />
      <svg
        class="quill-checkbox__box-icon quill-checkbox__box-icon--pale"
        height="24"
        role="img"
        viewBox="0 0 32 32"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.25 9.625H9.75a.64.64 0 0 0-.625.625v12.5c0 .352.273.625.625.625h12.5a.64.64 0 0 0 .625-.625v-12.5c0-.312-.312-.625-.625-.625M9.75 7.75h12.5c1.367 0 2.5 1.133 2.5 2.5v12.5c0 1.406-1.133 2.5-2.5 2.5H9.75a2.47 2.47 0 0 1-2.5-2.5v-12.5c0-1.367 1.094-2.5 2.5-2.5"
        />
      </svg>
    </div>
    <label>
      <span
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default quill-checkbox__label"
      >
        Checkbox label
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox should render info icon if showInfoIcon === true 1`] = `
<div>
  <div
    class="quill-checkbox"
  >
    <div
      class="quill-checkbox__wrapper quill-checkbox__wrapper--left"
    >
      <input
        class="quill-checkbox__box"
        type="checkbox"
      />
      <svg
        class="quill-checkbox__box-icon quill-checkbox__box-icon--pale"
        height="24"
        role="img"
        viewBox="0 0 32 32"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.25 9.625H9.75a.64.64 0 0 0-.625.625v12.5c0 .352.273.625.625.625h12.5a.64.64 0 0 0 .625-.625v-12.5c0-.312-.312-.625-.625-.625M9.75 7.75h12.5c1.367 0 2.5 1.133 2.5 2.5v12.5c0 1.406-1.133 2.5-2.5 2.5H9.75a2.47 2.47 0 0 1-2.5-2.5v-12.5c0-1.367 1.094-2.5 2.5-2.5"
        />
      </svg>
    </div>
    <label>
      <span
        class="quill-typography__body-text__size--sm__weight--regular__decoration--default quill-typography__color--default quill-checkbox__label"
      >
        Checkbox label
      </span>
    </label>
    <svg
      class="quill-checkbox__info-icon"
      height="22"
      role="img"
      viewBox="0 0 14 22"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M7 4.625a6.11 6.11 0 0 0-5.305 3.063c-1.12 1.914-1.12 4.238 0 6.125C2.79 15.727 4.785 16.875 7 16.875a6.04 6.04 0 0 0 5.277-3.062c1.121-1.887 1.121-4.211 0-6.126A6.1 6.1 0 0 0 7 4.626M7 17.75a6.96 6.96 0 0 1-6.07-3.5c-1.258-2.16-1.258-4.812 0-7A7.02 7.02 0 0 1 7 3.75c2.488 0 4.785 1.34 6.043 3.5 1.258 2.188 1.258 4.84 0 7A6.95 6.95 0 0 1 7 17.75m-1.312-4.375h.875V10.75h-.657a.43.43 0 0 1-.437-.437.45.45 0 0 1 .437-.438H7a.47.47 0 0 1 .438.438v3.062h.875a.47.47 0 0 1 .437.438.45.45 0 0 1-.437.437H5.687a.43.43 0 0 1-.437-.437.45.45 0 0 1 .438-.438M7 8.781a.63.63 0 0 1-.656-.656c0-.355.273-.656.656-.656.355 0 .656.3.656.656 0 .383-.3.656-.656.656"
        />
      </g>
      <defs>
        <clippath
          id="1c46262142574a7a3675d7c9e5e6dfb8__a"
        >
          <path
            d="M0 0h14v22H0z"
          />
        </clippath>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`Checkbox should render with default values if optional ones were not passed 1`] = `
<div>
  <div
    class="quill-checkbox"
  >
    <div
      class="quill-checkbox__wrapper quill-checkbox__wrapper--left"
    >
      <input
        class="quill-checkbox__box"
        type="checkbox"
      />
      <svg
        class="quill-checkbox__box-icon quill-checkbox__box-icon--pale"
        height="24"
        role="img"
        viewBox="0 0 32 32"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.25 9.625H9.75a.64.64 0 0 0-.625.625v12.5c0 .352.273.625.625.625h12.5a.64.64 0 0 0 .625-.625v-12.5c0-.312-.312-.625-.625-.625M9.75 7.75h12.5c1.367 0 2.5 1.133 2.5 2.5v12.5c0 1.406-1.133 2.5-2.5 2.5H9.75a2.47 2.47 0 0 1-2.5-2.5v-12.5c0-1.367 1.094-2.5 2.5-2.5"
        />
      </svg>
    </div>
    <label>
      <span
        class="quill-typography__body-text__size--sm__weight--regular__decoration--default quill-typography__color--default quill-checkbox__label"
      >
        Checkbox label
      </span>
    </label>
  </div>
</div>
`;
